feat: website url using github page

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_PRODUCTION_URL=https://mywebsite.com
+VUE_APP_PRODUCTION_URL=https://trungnhm1998.github.io/gamedev-portfolio/
 VUE_APP_TITLE=Trung Nguyen
 VUE_APP_DESCRIPTION=Trung's portfolio website.
 VUE_APP_OGDESCRIPTION=I love video games.
